--- a/HedgeModManager/UI/EditModWindow.xaml
+++ b/HedgeModManager/UI/EditModWindow.xaml
@@ -12,8 +12,8 @@
             <RowDefinition/>
             <RowDefinition Height="30"/>
         </Grid.RowDefinitions>
-        <Label Content="Please fill out some details about your mod." FontSize="15" HorizontalAlignment="Center"/>
+        <Label Content="{StaticResource EditModWindowUIHeader}" FontSize="15" HorizontalAlignment="Center"/>
         <local:PropertyEditor x:Name="Editor" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="1" Margin="5"/>
-        <Button Grid.Row="2" HorizontalAlignment="Right" Margin="5" Content="    OK    " Click="Ok_Click"/>
+        <Button Grid.Row="2" HorizontalAlignment="Right" Margin="5" Content="{StaticResource CommonUIOK}" Click="Ok_Click"/>
     </Grid>
 </Window>
