--- a/HedgeModManager/HedgeApp.xaml
+++ b/HedgeModManager/HedgeApp.xaml
@@ -1,9 +1,8 @@
 ﻿<Application
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:HedgeModManager" 
-             xmlns:Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2"
-             x:Class="HedgeModManager.App">
+             xmlns:local="clr-namespace:HedgeModManager"
+             x:Class="HedgeModManager.HedgeApp">
     
     <Application.Resources>
         <ResourceDictionary>
