--- a/HedgeModManager/App.xaml
+++ b/HedgeModManager/App.xaml
@@ -1,8 +1,9 @@
 ﻿<Application
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:HedgeModManager"
-             x:Class="HedgeModManager.HedgeApp">
+             xmlns:local="clr-namespace:HedgeModManager" 
+             xmlns:Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2"
+             x:Class="HedgeModManager.App">
     
     <Application.Resources>
         <ResourceDictionary>
