--- a/HedgeModManager/Languages/zh-CN.xaml
+++ b/HedgeModManager/Languages/zh-CN.xaml
@@ -111,5 +111,8 @@
     <system:String x:Key="StatusUIDownloadFinished"       >已完成下载</system:String>
     <system:String x:Key="StatusUIDownloadFailed"         >下载失败</system:String>
 
+    <!-- Dialog UI Strings -->
+    <system:String xml:space="preserve" x:Key="DialogUIDeleteMod">您确定要删除 "{0}"？&#x0a;此操作无法撤消！</system:String>
+
 
 </ResourceDictionary>
