--- a/HedgeModManager/UI/EditModWindow.xaml
+++ b/HedgeModManager/UI/EditModWindow.xaml
@@ -14,6 +14,6 @@
         </Grid.RowDefinitions>
         <Label Content="{StaticResource EditModWindowUIHeader}" FontSize="15" HorizontalAlignment="Center"/>
         <local:PropertyEditor x:Name="Editor" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="1" Margin="5"/>
-        <Button Grid.Row="2" HorizontalAlignment="Right" Margin="5" Content="{StaticResource CommonUIOK}" Click="Ok_Click"/>
+        <Button Grid.Row="2" HorizontalAlignment="Right" Margin="0,5,5,5" Content="{StaticResource CommonUIOK}" Click="Ok_Click" Width="56"/>
     </Grid>
 </Window>
