--- a/HedgeModManager/Languages/pt-BR.xaml
+++ b/HedgeModManager/Languages/pt-BR.xaml
@@ -92,7 +92,7 @@
 
     <!-- Status UI Strings -->
     <system:String x:Key="StatusUILoadedMods"             >{0} mods carregados</system:String>
-    <system:String x:Key="StatusUICheckingModUpdates"     >A verificar por atualizações de {0}</system:String>
+    <system:String x:Key="StatusUICheckingModUpdates"     >Verificando por atualizações de {0}</system:String>
     <system:String x:Key="StatusUIFailedToUpdate"         >Falha ao atualizar {0}! {1}</system:String>
     <system:String x:Key="StatusUIModUpdateCheckFinish"   >Verificação de atualizações de mods terminada: {0} {2}, {1} {3}.</system:String>
     <system:String x:Key="StatusUIStartingGame"           >Iniciando {0}</system:String>
