--- a/HedgeModManager/Languages/es-MX.xaml
+++ b/HedgeModManager/Languages/es-MX.xaml
@@ -18,7 +18,7 @@
     <!-- Main UI Strings -->
     <system:String x:Key="MainUIMods"          >Modificaciones</system:String>
     <system:String x:Key="MainUICodes"         >Trucos</system:String>
-    <system:String x:Key="MainUISettings"      >Configuracion</system:String>
+    <system:String x:Key="MainUISettings"      >Configuración</system:String>
     <system:String x:Key="MainUIRemoveMod"     >Quitar Mod</system:String>
     <system:String x:Key="MainUIAddMod"        >Añadir Mod</system:String>
     <system:String x:Key="MainUIRefreshModList">Refrescar lista de Mods</system:String>
@@ -28,13 +28,13 @@
 
     <!-- Mods UI Strings -->
     <system:String x:Key="ModsUIName"           >Nombre</system:String>
-    <system:String x:Key="ModsUIVersion"        >Version</system:String>
+    <system:String x:Key="ModsUIVersion"        >Versión</system:String>
     <system:String x:Key="ModsUIAuthor"         >Autor</system:String>
-    <system:String x:Key="ModsUISupportSave"    >Soporta Guardado</system:String>
-    <system:String x:Key="ModsUIHasUpdate"      >Actualizacion</system:String>
-    <system:String x:Key="ModsUIModDescription" >Descripcion</system:String>
+    <system:String x:Key="ModsUISupportSave"    >Soporta de guardado</system:String>
+    <system:String x:Key="ModsUIHasUpdate"      >Actualización</system:String>
+    <system:String x:Key="ModsUIModDescription" >Descripción</system:String>
     <system:String x:Key="ModsUIModOpenFolder"  >Abrir carpeta contenedora</system:String>
-    <system:String x:Key="ModsUIModCheckUpdates">Revisar Actualizacion</system:String>
+    <system:String x:Key="ModsUIModCheckUpdates">Revisar actualización</system:String>
     <system:String x:Key="ModsUIModEdit"        >Editar mod</system:String>
     <system:String x:Key="ModsUIModDelete"      >Borrar mod</system:String>
     <system:String x:Key="ModsUIModDragDrop"    >Arrastra y suelta objetos para cambiar el orden de carga de los mods</system:String>
@@ -50,41 +50,41 @@
     <system:String x:Key="SettingsUIUninstallLoader">Desinstalar cargador de mods</system:String>
     <system:String x:Key="SettingsUIOpenMods"       >Abrir carpeta de mdos</system:String>
     <system:String x:Key="SettingsUIEnableML"       >Activar cargador de mods</system:String>
-    <system:String x:Key="SettingsUIEnableDebug"    >Activar consola depuracion</system:String>
-    <system:String x:Key="SettingsUIEnableSRedir"   >Activar redireccion de Guardado</system:String>
-    <system:String x:Key="SettingsUILoadTopBottom"  >Cargar de arriba a abajao</system:String>
+    <system:String x:Key="SettingsUIEnableDebug"    >Activar consola de depuración</system:String>
+    <system:String x:Key="SettingsUIEnableSRedir"   >Activar redirección de guardado</system:String>
+    <system:String x:Key="SettingsUILoadTopBottom"  >Cargar de arriba a abajo</system:String>
     <system:String x:Key="SettingsUILabelLoaders"   >Cargadores:</system:String>
     <system:String x:Key="SettingsUILabelGame"      >Juego:</system:String>
     <system:String x:Key="SettingsUILabelMDir"      >Carpeta de Mods:</system:String>
     <!--   Hedge Mod Manager -->
     <system:String x:Key="SettingsUIHMMHeader"      >Hedge Mod Manager</system:String>
-    <system:String x:Key="SettingsUICheckMLUpdate"  >Obtener Actualizaciones del cargador de mods</system:String>
-    <system:String x:Key="SettingsUICheckCLUpdate"  >Obtener actualizacion del cargador de codigos</system:String>
+    <system:String x:Key="SettingsUICheckMLUpdate"  >Obtener actualizaciones del cargador de mods</system:String>
+    <system:String x:Key="SettingsUICheckCLUpdate"  >Obtener actualizaciones del cargador de códigos</system:String>
     <system:String x:Key="SettingsUICheckModUpdates">Obtener actualizaciones de mods</system:String>
-    <system:String x:Key="SettingsUIKeepHMMOpen"    >Mantener Hedge Mod Manager abierto despues de iniciar el juego</system:String>
+    <system:String x:Key="SettingsUIKeepHMMOpen"    >Mantener Hedge Mod Manager abierto después de iniciar el juego</system:String>
     <system:String x:Key="SettingsUIAboutHMM"       >Acerca de Hedge Mod Manager</system:String>
     <system:String x:Key="SettingsUILanguage"       >Idioma:</system:String>
 
     <!-- MainWindow UI Strings -->
     <system:String x:Key="MainUIInstallFormHeader"   >Instalando un mod de...</system:String>
     <system:String x:Key="MainUIInstallFormOptionDir">Instalando de una carpeta</system:String>
-    <system:String x:Key="MainUIInstallFormOptionArc">Instalando de Archivo</system:String>
-    <system:String x:Key="MainUIInstallFormOptionNew">Creando mod (para desarrolladores!)</system:String>
-    <system:String x:Key="MainUIMissingLoaderHeader" >Cargador de mods no instalado!</system:String>
-    <system:String xml:space="preserve" x:Key="MainUIMissingLoaderDesc">Para que {0} cargue mods, Se debe instalar el cargador de mods. Quieres instalarlo?</system:String>
-    <system:String x:Key="MainUISelectModsDBTitle"   >Selecciona de donde cargar mods...</system:String>
+    <system:String x:Key="MainUIInstallFormOptionArc">Instalando de un archivo</system:String>
+    <system:String x:Key="MainUIInstallFormOptionNew">Creando mod (¡Para desarrolladores!)</system:String>
+    <system:String x:Key="MainUIMissingLoaderHeader" >¡Cargador de mods no instalado!</system:String>
+    <system:String xml:space="preserve" x:Key="MainUIMissingLoaderDesc">Para que {0} cargue mods, se debe instalar el cargador de mods. ¿Quieres instalarlo?</system:String>
+    <system:String x:Key="MainUISelectModsDBTitle"   >Selecciona de dónde cargar mods...</system:String>
 
     <!-- OptionsWindow UI Strings -->
-    <system:String x:Key="OptionsWindowUIError"      >Elige una opcion!</system:String>
+    <system:String x:Key="OptionsWindowUIError"      >¡Elige una opción!</system:String>
 
     <!-- AboutWindow UI Strings -->
     <system:String x:Key="AboutWindowUITitle"  >Sobre Hedge Mod Manager</system:String>
-    <system:String x:Key="AboutWindowUILine1"  >Un porgrama diseñado para cargar mods de juegos en el Hedgehog Engine</system:String>
-    <system:String x:Key="AboutWindowUILine2"  >Necesita una version legal de cualquiera de los juegos soportados.</system:String>
-    <system:String x:Key="AboutWindowUICredits">Creditos:</system:String>
+    <system:String x:Key="AboutWindowUILine1"  >Un programa diseñado para cargar mods de juegos hechos con el Hedgehog Engine</system:String>
+    <system:String x:Key="AboutWindowUILine2"  >Necesita una versión legal de cualquiera de los juegos soportados.</system:String>
+    <system:String x:Key="AboutWindowUICredits">Créditos:</system:String>
 
     <!-- EditModWindow UI Strings -->
-    <system:String x:Key="EditModWindowUIHeader">Llena unos detalles sobre tu mod.</system:String>
+    <system:String x:Key="EditModWindowUIHeader">Añade unos detalles sobre tu mod.</system:String>
 
     <!-- PropertyEditor UI Strings -->
     <system:String x:Key="PropertyEditorUIName" >Nombre</system:String>
@@ -92,27 +92,27 @@
 
     <!-- Status UI Strings -->
     <system:String x:Key="StatusUILoadedMods"             >Cargados {0} mods</system:String>
-    <system:String x:Key="StatusUICheckingModUpdates"     >Obteniendo actualizaciones de{0}</system:String>
-    <system:String x:Key="StatusUIFailedToUpdate"         >Error al actualizar {0}! {1}</system:String>
-    <system:String x:Key="StatusUIModUpdateCheckFinish"   >Revision de Actualizaciones: {0} completadas, {1} fallidas</system:String>
+    <system:String x:Key="StatusUICheckingModUpdates"     >Obteniendo actualizaciones de {0}</system:String>
+    <system:String x:Key="StatusUIFailedToUpdate"         >¡Error al actualizar {0}! {1}</system:String>
+    <system:String x:Key="StatusUIModUpdateCheckFinish"   >Revisión de Actualizaciones: {0} completadas, {1} fallidas</system:String>
     <system:String x:Key="StatusUIStartingGame"           >Iniciando {0}</system:String>
     <system:String x:Key="StatusUICheckingForUpdates"     >Revisando Actualizaciones</system:String>
     <system:String x:Key="StatusUINoUpdatesFound"         >No se encontraron actualizaciones</system:String>
     <system:String x:Key="StatusUIFailedToCheckUpdates"   >Error al revisar actualizaciones</system:String>
     <system:String x:Key="StatusUICheckingForLoaderUpdate">Obteniendo actualizaciones de {0}</system:String>
-    <system:String x:Key="StatusUILoaderUpToDate"         >{0} esta en la version mas reciente</system:String>
+    <system:String x:Key="StatusUILoaderUpToDate"         >{0} esta en la versión mas reciente</system:String>
     <system:String x:Key="StatusUIFailedLoaderUpdateCheck">Error al revisar actualizaciones de {0}</system:String>
-    <system:String x:Key="StatusUIInstalledLoader"        >Instalado{0}</system:String>
+    <system:String x:Key="StatusUIInstalledLoader"        >Instalado {0}</system:String>
     <system:String x:Key="StatusUIDeletedMod"             >Borrado {0}</system:String>
-    <system:String x:Key="StatusUIModsDBSaved"            >Salvada base de datos</system:String>
-    <system:String x:Key="StatusUIModsDBLocationChanged"  >Cambio ubicacion de base de datos</system:String>
-    <system:String x:Key="StatusUIGameChange"             >Cambio juego a {0}</system:String>
+    <system:String x:Key="StatusUIModsDBSaved"            >Guardada base de datos</system:String>
+    <system:String x:Key="StatusUIModsDBLocationChanged"  >Cambio de ubicación de la base de datos</system:String>
+    <system:String x:Key="StatusUIGameChange"             >Cambio de juego a {0}</system:String>
     <system:String x:Key="StatusUIDownloadingCodes"       >Descargando trucos para {0}</system:String>
     <system:String x:Key="StatusUIDownloadFinished"       >Descarga finalizada</system:String>
     <system:String x:Key="StatusUIDownloadFailed"         >Descarga fallida</system:String>
     
     <!-- Dialog UI Strings -->
-    <system:String xml:space="preserve" x:Key="DialogUIDeleteMod">Quieres borrar "{0}"?&#x0a;Esta accion no puede deshacerse!</system:String>
+    <system:String xml:space="preserve" x:Key="DialogUIDeleteMod">¿Quieres borrar "{0}"?&#x0a;¡Ésta acción no puede deshacerse!</system:String>
     
     <!-- Status UI Lang Stuff Strings -->
     <system:String x:Key="StatusUIUpdateCompletedSingular"      >completado</system:String>
